--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
-  "name": "@semantic-release/gitlab-config",
-  "description": "semantic-release shareable config to publish npm packages with GitLab",
+  "name": "@artemv/simple-semantic-config",
+  "description": "Simple semantic-release shareable config to publish npm packages",
   "version": "0.0.0-development",
-  "author": "Pierre Vanduynslager (https://github.com/pvdlg)",
+  "author": {
+    "name": "Artem Vasiliev",
+    "email": "artem.job@gmail.com",
+    "url": "github.com/artemv"
+  },
   "bugs": {
-    "url": "https://github.com/semantic-release/gitlab-config/issues"
+    "url": "https://github.com/artemv/simple-semantic-config/issues"
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "contributors": [
-    "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
-    "Gregor Martynus (https://twitter.com/gr2m)"
-  ],
   "dependencies": {
-    "@semantic-release/commit-analyzer": "^6.1.0",
-    "@semantic-release/gitlab": "^3.1.0",
-    "@semantic-release/npm": "^5.1.1",
-    "@semantic-release/release-notes-generator": "^7.1.4"
+    "semantic-release": "^15.13.3"
   },
   "devDependencies": {
-    "commitizen": "^3.0.0",
-    "cz-conventional-changelog": "^2.0.0",
-    "semantic-release": "^15.10.0",
     "xo": "^0.24.0"
   },
   "engines": {
@@ -33,9 +22,8 @@
   "files": [
     "index.js"
   ],
-  "homepage": "https://github.com/semantic-release/gitlab-config#readme",
+  "homepage": "https://github.com/artemv/simple-semantic-config#readme",
   "keywords": [
-    "gitlab",
     "conventional-changelog",
     "release",
     "semantic-release",
@@ -44,24 +32,15 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "peerDependencies": {
-    "semantic-release": ">=15.10.0 <16.0.0"
-  },
   "prettier": {
     "printWidth": 120,
     "trailingComma": "es5"
   },
-  "publishConfig": {
-    "access": "public",
-    "tag": "next"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/semantic-release/gitlab-config.git"
+    "url": "https://github.com/artemv/simple-semantic-config.git"
   },
   "scripts": {
-    "cm": "git-cz",
-    "semantic-release": "semantic-release",
     "test": "xo"
   },
   "xo": {
