--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@artemv/simple-semantic-config",
   "description": "Simple semantic-release shareable config to publish npm packages",
-  "version": "0.0.0-development",
+  "version": "6.0.0",
   "author": {
     "name": "Artem Vasiliev",
     "email": "artem.job@gmail.com",
