chore: moved couple semantic-release-related scripts from build-tools
they make more sense here

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "email": "artem.job@gmail.com",
     "url": "github.com/artemv"
   },
+  "bin": {
+    "simple-semantic-release-pre": "./scripts/semantic-release-pre.sh",
+    "simple-semantic-release": "./scripts/semantic-release.sh"
+  },
   "bugs": {
     "url": "https://github.com/artemv/simple-semantic-config/issues"
   },
