chore: removed extra script
it's limited to CircleCI and can easily be replaced with sh one-liner like this:
`if [[ "${CIRCLE_PROJECT_USERNAME}"="my-org" ]]; then yarn semantic-release; fi`

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": "github.com/artemv"
   },
   "bin": {
-    "simple-semantic-release-pre": "./scripts/semantic-release-pre.sh",
-    "simple-semantic-release": "./scripts/semantic-release.sh"
+    "simple-semantic-release-pre": "./scripts/semantic-release-pre.sh"
   },
   "bugs": {
     "url": "https://github.com/artemv/simple-semantic-config/issues"
