--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "simple-semantic-config",
   "description": "Simple semantic-release shareable config to publish npm packages",
-  "version": "6.0.9",
+  "version": "6.0.12",
   "author": {
     "name": "Artem Vasiliev",
     "email": "artem.job@gmail.com",
     "url": "github.com/artemv"
   },
   "bin": {
-    "simple-semantic-release-pre": "scripts/semantic-release-pre.sh"
+    "simple-semantic-release-pre": "bin/semantic-release-pre.sh"
   },
   "bugs": {
     "url": "https://github.com/artemv/simple-semantic-config/issues"
@@ -44,8 +44,7 @@
     "url": "https://github.com/artemv/simple-semantic-config.git"
   },
   "scripts": {
-    "test": "xo",
-    "simple-semantic-release-pre": "./scripts/semantic-release-pre.sh"
+    "test": "xo"
   },
   "xo": {
     "prettier": true,
