--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-semantic-config",
   "description": "Simple semantic-release shareable config to publish npm packages",
-  "version": "6.0.12",
+  "version": "6.0.13",
   "author": {
     "name": "Artem Vasiliev",
     "email": "artem.job@gmail.com",
@@ -23,6 +23,7 @@
     "node": ">=8.3"
   },
   "files": [
+    "bin",
     "index.js"
   ],
   "homepage": "https://github.com/artemv/simple-semantic-config#readme",
